# fastapi_stress_test

./: .gitignore  pyproject.toml  run_server.py
app/: main.py  ml_model.py  pydantic_models.py
tests/: locustfile.py
