[project]
name = "fastapi-stress-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "locust>=2.42.0",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
